<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout_InputOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/default_input"
            android:inputType="none"
            android:maxLines="1"
            android:scrollbars="vertical"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColorLink="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView_Output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto"
            android:maxLines="3"
            android:text="@string/default_output"
            android:textAlignment="textEnd"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout_InputOutput"
        android:layout_alignParentBottom="true"
        android:background="@color/colorNumbersBack"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_num_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_7"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_num_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_8"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_num_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_9"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_num_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_4"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_num_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_5"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_num_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_6"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_num_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_num_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_2"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_num_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_3"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/button_dot"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_num_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/num_0"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_equals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/button_equals"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:showDividers="none"
            android:weightSum="5">

            <Button
                android:id="@+id/button_del"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:text="@string/button_del"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:text="@string/button_divide"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_multiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:text="@string/button_multiply"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:text="@string/button_minus"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:text="@string/button_plus"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/linearLayout_InputOutput"
        android:background="@drawable/shape" />

</RelativeLayout>